option java_package = "com.zero.example.protobuf";
//输出的java类名
option java_outer_classname = "StructurePro";
message PlayerInfoProtocol {
//唯一id
	required int64 playerId = 1;
	//角色名
	required string name = 2;
	// 等级
	required int32 level = 3;
	// 经验
	required int64 exp = 4;
	// 战斗力
	required int32 sex = 5;
	// 游戏币
	required int64 money = 6;
	// 元宝
	required int64 rmb = 7;
	// 潜能
	required int32 qianneng = 8;
	// 体质
	required int32 tizhi = 9;
	// 根骨
	required int32 gengu = 10;
	// 悟性
	required int32 wuxing = 11;
	// 灵巧
	required int32 lingqiao = 12;
	// 气血
	required int32 hp = 13;
	// 体力
	required int32 tili = 14;
	// 内力
	required int32 mp = 15;
	// 饱食
	required int32 baoshi = 16;
	// 年龄
	required int32 age = 17;
	// 福源
	required int32 fuyuan = 18;
	// 仪容
	required int32 yirong = 19;
	// 角色所在路点
	required int32 sceneNode = 20;
	// 角色拥有的技能组
	repeated SkillGroupInfoProtocol skillGroupInfo = 21;
	//师父id
	required int32 masterId = 22;
	//师父类别(0:没有门派,1:NPC, 2:Player)
	required int32 masterType = 23;
	//技能学习剩余时间(单位：s) 0:技能学习完成
	required int32 learnSkillTime = 24;
	//玩家当前在学的技能组ID
	required int32 skillGroupId = 25;
	//玩家当前在学的技能组等级
	required int32 skillGroupLevel = 26;
	//服务器当前时间戳
	required int32 currentTimestamp = 27;
}



//节点信息
message SceneNodeInfoProtocol {
	//唯一Id
	required int64 uid = 1;
	//类型 玩家-1 NPC>-1
	required int64 templateId = 2;
	//名字
	required string name = 3;
	//状态 1正常 2战斗 3忙碌 4死亡 5腐烂
	required int32 ustate = 4;
}


//任务信息
message MissionInfoProtocol {
//任务ID
	required int32 missionId = 1;
	//任务状态  0未接取  1进行中  2完成但未领取奖励  3完成且已领取奖励
	required int32 missionState = 2;
	//任务目标所需数量
	repeated MissionTargetProtocol missionTarget = 3;
}

message MissionTargetProtocol {
//任务目标ID
	optional int32 targetId = 1;
	//任务目标所需数量
	optional int32 count = 2;
}
//战斗对象
message BattleFighterInfoProtocol {
//战斗对象唯一Id
	required int64 fighterId = 1;
	//战斗对象名称
	required string name = 2;
	//战斗对象当前气血HP
	required int32 hp = 3;
	//战斗对象最大气血HP
	required int32 maxHp = 4;
	//所属阵营(攻防 1 防 0)
	required int32 postion = 5;
}
//技能组信息
message SkillGroupInfoProtocol {
	//技能组的唯一id
	required int32 skillGroupId = 1;
	//技能组当前等级
	required int32 level = 2;
}
//战斗技能施放
message BattleAttackFireInfoProtocol {
	//释放者 唯一id
	required int64 attackerId = 1;
	//武器名称 id
	required int64 weaponId = 2;
	//招式名称 id
	required int32 skillId = 3;
	//目标名称 tid
	repeated int64 defenderId = 4;
	//目标部位 postion id
	required int32 bodyPostion = 5;
}
//战斗技能施放反馈
message BattleAttackBackInfoProtocol {
	//目标名称 tid
	required int64 defenderId = 1;
	//触发Id 没有0
	required int32 touchSkillId = 2;
	//效果 feedbackid
	required int32 feedbackId = 3;
	//受击结果  id
	required int32 resultState = 4;
	//目标受到伤害后剩余血量
	required int32 defenderHp = 5;
}

//战斗技能计算
message BattleAttackCalculateInfoProtocol {
	//目标名称 tid
	required int64 defenderId = 1;
	//应对方式 id
	required int32 replyId = 2;
	//释放者 唯一id
	required int64 attackerId = 3;
	//伤害结果 100|11
	required string damageResult =4;
}

//战斗状态描述
message BattleAttackStateInfoProtocol {
	//目标名称 tid
	required int64 defenderId = 1;
	//debuff id
	required int32 buffId = 2;
	//伤害结果 100|11
	required string damageResult =3;
	//状态Id
	required int64 stateid = 4;
}

message StayOnlineInfoProtocol{
	//是否在学习技能
	required bool learnSkill = 1;
	//是否在打工
	required bool workPartTime = 2;
	//学习技能剩余时间
	required int32 learnSkillTimeLeftSec = 3;
	//打工剩余时间
	required int32 workTimeLeftSec = 4;
}

message SkillInfoProtocol{
	//技能id
	required int32 skillGroupId = 1;
	//技能状态 0未完成 1已完成
	required int32 status = 2;
	//熟练度
	required int32 proficiency = 3;
	//技能最大等级
	required int32 skillGroupMaxLevel = 4;
	//技能当前等级
	required int32 skillGroupCurrentLevel = 5;
}

message HookInfoProtocol{
	//挂机ID
	required int32 hookId = 1;
	//挂机名称
	required string hookName = 2;
	//持续时间
	required int32 duration = 3;
	//奖励信息
	repeated HookRewardInfoProtocol rewardInfo = 4;
	//消耗信息
	repeated HookConsumeInfoProtocol consumeInfo = 5;
}

message LearnSkillConsumeInfoProtocol{
	//玩家当前金币
	required int32 playerMoney = 1;
	//玩家当前潜能
	required int32 playerPotency = 2;
}

message HookConsumeInfoProtocol{
	//消耗类别
	required int32 consumeType = 1;
	//消耗数量
	required int32 consumeValue = 2;
}

message HookRewardInfoProtocol{
	//奖励类别
	required int32 rewardType = 1;
	//奖励数值
	required int32 rewardValue = 2;
}

message MissionRewardInfoProtocol{
	//奖励金币
	required int32 rewardMoney = 1;
	//奖励经验
	required int32 rewardExp = 2;
}